packages/cb-bsdl-parser/cb_bsdl_parser-0.7.2-py3-none-any.whl/cb_bsdl_parser/.antlr/CBBsdlParser.java
// Generated from /home/pth/chriesibaum.repo/cb_bsdl_parser/cb_bsdl_parser/CBBsdl.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CBBsdlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ENTITY=1, END=2, IS=3, GENERIC=4, STRING=5, PHYSICAL_PIN_MAP=6, ATTRIBUTE=7, 
		BS_LEN=8, BS_REG=9, OF=10, USE=11, CONSTANT=12, PIN_MAP_STRING=13, PORT=14, 
		INOUT=15, IN=16, OUT=17, LINKAGE=18, BIT=19, BIT_VECTOR=20, TO=21, DOWNTO=22, 
		DOT=23, COMMA=24, COLON=25, SEMICOLON=26, BRACKET_OPEN=27, BRACKET_CLOSE=28, 
		AMPERSAND=29, QUOTES=30, EQUALS=31, ASTERISK=32, UNDERLINE=33, SQUARE_OPEN=34, 
		SQUARE_CLOSE=35, ID=36, REAL_LITERAL=37, INTEGER=38, DIGIT=39, EXPONENT=40, 
		WS=41, COMMENT=42;
	public static final int
		RULE_bsdl = 0, RULE_entity = 1, RULE_entity_name = 2, RULE_body = 3, RULE_generic_phys_pin_map = 4, 
		RULE_phys_pin_map_name = 5, RULE_attr_bsr_len = 6, RULE_bsr_len = 7, RULE_port_dec = 8, 
		RULE_port_def = 9, RULE_port_name = 10, RULE_port_function = 11, RULE_port_type = 12, 
		RULE_bit = 13, RULE_bit_vector = 14, RULE_pin_map = 15, RULE_pin_def = 16, 
		RULE_pin_num = 17, RULE_pin_num_arr = 18, RULE_attr_bsr = 19, RULE_bsr_def = 20, 
		RULE_data_cell = 21, RULE_bsr_cell0 = 22, RULE_bsr_cell1 = 23, RULE_cell_type = 24, 
		RULE_cell_desc = 25, RULE_cell_func = 26, RULE_cell_val = 27, RULE_ctrl_cell = 28, 
		RULE_disval = 29, RULE_bit_range = 30, RULE_undef_part = 31, RULE_number = 32, 
		RULE_identifier = 33, RULE_comment = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"bsdl", "entity", "entity_name", "body", "generic_phys_pin_map", "phys_pin_map_name", 
			"attr_bsr_len", "bsr_len", "port_dec", "port_def", "port_name", "port_function", 
			"port_type", "bit", "bit_vector", "pin_map", "pin_def", "pin_num", "pin_num_arr", 
			"attr_bsr", "bsr_def", "data_cell", "bsr_cell0", "bsr_cell1", "cell_type", 
			"cell_desc", "cell_func", "cell_val", "ctrl_cell", "disval", "bit_range", 
			"undef_part", "number", "identifier", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'entity'", "'end'", "'is'", "'generic'", "'string'", "'PHYSICAL_PIN_MAP'", 
			"'attribute'", "'BOUNDARY_LENGTH'", "'BOUNDARY_REGISTER'", "'of'", "'use'", 
			"'constant'", "'PIN_MAP_STRING'", "'port'", "'inout'", "'in'", "'out'", 
			"'linkage'", "'bit'", "'bit_vector'", "'to'", "'downto'", "'.'", "','", 
			"':'", "';'", "'('", "')'", "'&'", "'\"'", "':='", "'*'", "'_'", "'['", 
			"']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ENTITY", "END", "IS", "GENERIC", "STRING", "PHYSICAL_PIN_MAP", 
			"ATTRIBUTE", "BS_LEN", "BS_REG", "OF", "USE", "CONSTANT", "PIN_MAP_STRING", 
			"PORT", "INOUT", "IN", "OUT", "LINKAGE", "BIT", "BIT_VECTOR", "TO", "DOWNTO", 
			"DOT", "COMMA", "COLON", "SEMICOLON", "BRACKET_OPEN", "BRACKET_CLOSE", 
			"AMPERSAND", "QUOTES", "EQUALS", "ASTERISK", "UNDERLINE", "SQUARE_OPEN", 
			"SQUARE_CLOSE", "ID", "REAL_LITERAL", "INTEGER", "DIGIT", "EXPONENT", 
			"WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CBBsdl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CBBsdlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BsdlContext extends ParserRuleContext {
		public EntityContext entity() {
			return getRuleContext(EntityContext.class,0);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public BsdlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bsdl; }
	}

	public final BsdlContext bsdl() throws RecognitionException {
		BsdlContext _localctx = new BsdlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_bsdl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			entity();
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT) {
				{
				{
				setState(71);
				comment();
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EntityContext extends ParserRuleContext {
		public TerminalNode ENTITY() { return getToken(CBBsdlParser.ENTITY, 0); }
		public List<Entity_nameContext> entity_name() {
			return getRuleContexts(Entity_nameContext.class);
		}
		public Entity_nameContext entity_name(int i) {
			return getRuleContext(Entity_nameContext.class,i);
		}
		public TerminalNode IS() { return getToken(CBBsdlParser.IS, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode END() { return getToken(CBBsdlParser.END, 0); }
		public TerminalNode SEMICOLON() { return getToken(CBBsdlParser.SEMICOLON, 0); }
		public EntityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity; }
	}

	public final EntityContext entity() throws RecognitionException {
		EntityContext _localctx = new EntityContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_entity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(ENTITY);
			setState(78);
			entity_name();
			setState(79);
			match(IS);
			setState(80);
			body();
			setState(81);
			match(END);
			setState(82);
			entity_name();
			setState(83);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Entity_nameContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Entity_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity_name; }
	}

	public final Entity_nameContext entity_name() throws RecognitionException {
		Entity_nameContext _localctx = new Entity_nameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_entity_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public List<Generic_phys_pin_mapContext> generic_phys_pin_map() {
			return getRuleContexts(Generic_phys_pin_mapContext.class);
		}
		public Generic_phys_pin_mapContext generic_phys_pin_map(int i) {
			return getRuleContext(Generic_phys_pin_mapContext.class,i);
		}
		public List<Port_decContext> port_dec() {
			return getRuleContexts(Port_decContext.class);
		}
		public Port_decContext port_dec(int i) {
			return getRuleContext(Port_decContext.class,i);
		}
		public List<Pin_mapContext> pin_map() {
			return getRuleContexts(Pin_mapContext.class);
		}
		public Pin_mapContext pin_map(int i) {
			return getRuleContext(Pin_mapContext.class,i);
		}
		public List<Attr_bsr_lenContext> attr_bsr_len() {
			return getRuleContexts(Attr_bsr_lenContext.class);
		}
		public Attr_bsr_lenContext attr_bsr_len(int i) {
			return getRuleContext(Attr_bsr_lenContext.class,i);
		}
		public List<Attr_bsrContext> attr_bsr() {
			return getRuleContexts(Attr_bsrContext.class);
		}
		public Attr_bsrContext attr_bsr(int i) {
			return getRuleContext(Attr_bsrContext.class,i);
		}
		public List<Undef_partContext> undef_part() {
			return getRuleContexts(Undef_partContext.class);
		}
		public Undef_partContext undef_part(int i) {
			return getRuleContext(Undef_partContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_body);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(93);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						setState(87);
						generic_phys_pin_map();
						}
						break;
					case 2:
						{
						setState(88);
						port_dec();
						}
						break;
					case 3:
						{
						setState(89);
						pin_map();
						}
						break;
					case 4:
						{
						setState(90);
						attr_bsr_len();
						}
						break;
					case 5:
						{
						setState(91);
						attr_bsr();
						}
						break;
					case 6:
						{
						setState(92);
						undef_part();
						}
						break;
					}
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Generic_phys_pin_mapContext extends ParserRuleContext {
		public TerminalNode GENERIC() { return getToken(CBBsdlParser.GENERIC, 0); }
		public TerminalNode BRACKET_OPEN() { return getToken(CBBsdlParser.BRACKET_OPEN, 0); }
		public TerminalNode PHYSICAL_PIN_MAP() { return getToken(CBBsdlParser.PHYSICAL_PIN_MAP, 0); }
		public TerminalNode COLON() { return getToken(CBBsdlParser.COLON, 0); }
		public TerminalNode STRING() { return getToken(CBBsdlParser.STRING, 0); }
		public TerminalNode EQUALS() { return getToken(CBBsdlParser.EQUALS, 0); }
		public List<TerminalNode> QUOTES() { return getTokens(CBBsdlParser.QUOTES); }
		public TerminalNode QUOTES(int i) {
			return getToken(CBBsdlParser.QUOTES, i);
		}
		public Phys_pin_map_nameContext phys_pin_map_name() {
			return getRuleContext(Phys_pin_map_nameContext.class,0);
		}
		public TerminalNode BRACKET_CLOSE() { return getToken(CBBsdlParser.BRACKET_CLOSE, 0); }
		public TerminalNode SEMICOLON() { return getToken(CBBsdlParser.SEMICOLON, 0); }
		public Generic_phys_pin_mapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_generic_phys_pin_map; }
	}

	public final Generic_phys_pin_mapContext generic_phys_pin_map() throws RecognitionException {
		Generic_phys_pin_mapContext _localctx = new Generic_phys_pin_mapContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_generic_phys_pin_map);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(GENERIC);
			setState(101);
			match(BRACKET_OPEN);
			setState(102);
			match(PHYSICAL_PIN_MAP);
			setState(103);
			match(COLON);
			setState(104);
			match(STRING);
			setState(105);
			match(EQUALS);
			setState(106);
			match(QUOTES);
			setState(107);
			phys_pin_map_name();
			setState(108);
			match(QUOTES);
			setState(109);
			match(BRACKET_CLOSE);
			setState(110);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Phys_pin_map_nameContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Phys_pin_map_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_phys_pin_map_name; }
	}

	public final Phys_pin_map_nameContext phys_pin_map_name() throws RecognitionException {
		Phys_pin_map_nameContext _localctx = new Phys_pin_map_nameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_phys_pin_map_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Attr_bsr_lenContext extends ParserRuleContext {
		public TerminalNode ATTRIBUTE() { return getToken(CBBsdlParser.ATTRIBUTE, 0); }
		public TerminalNode BS_LEN() { return getToken(CBBsdlParser.BS_LEN, 0); }
		public TerminalNode OF() { return getToken(CBBsdlParser.OF, 0); }
		public Entity_nameContext entity_name() {
			return getRuleContext(Entity_nameContext.class,0);
		}
		public TerminalNode COLON() { return getToken(CBBsdlParser.COLON, 0); }
		public TerminalNode ENTITY() { return getToken(CBBsdlParser.ENTITY, 0); }
		public TerminalNode IS() { return getToken(CBBsdlParser.IS, 0); }
		public Bsr_lenContext bsr_len() {
			return getRuleContext(Bsr_lenContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(CBBsdlParser.SEMICOLON, 0); }
		public Attr_bsr_lenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_bsr_len; }
	}

	public final Attr_bsr_lenContext attr_bsr_len() throws RecognitionException {
		Attr_bsr_lenContext _localctx = new Attr_bsr_lenContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_attr_bsr_len);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(ATTRIBUTE);
			setState(115);
			match(BS_LEN);
			setState(116);
			match(OF);
			setState(117);
			entity_name();
			setState(118);
			match(COLON);
			setState(119);
			match(ENTITY);
			setState(120);
			match(IS);
			setState(121);
			bsr_len();
			setState(122);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bsr_lenContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public Bsr_lenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bsr_len; }
	}

	public final Bsr_lenContext bsr_len() throws RecognitionException {
		Bsr_lenContext _localctx = new Bsr_lenContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bsr_len);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			number();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Port_decContext extends ParserRuleContext {
		public TerminalNode PORT() { return getToken(CBBsdlParser.PORT, 0); }
		public TerminalNode BRACKET_OPEN() { return getToken(CBBsdlParser.BRACKET_OPEN, 0); }
		public TerminalNode BRACKET_CLOSE() { return getToken(CBBsdlParser.BRACKET_CLOSE, 0); }
		public TerminalNode SEMICOLON() { return getToken(CBBsdlParser.SEMICOLON, 0); }
		public List<Port_defContext> port_def() {
			return getRuleContexts(Port_defContext.class);
		}
		public Port_defContext port_def(int i) {
			return getRuleContext(Port_defContext.class,i);
		}
		public Port_decContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port_dec; }
	}

	public final Port_decContext port_dec() throws RecognitionException {
		Port_decContext _localctx = new Port_decContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_port_dec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(PORT);
			setState(127);
			match(BRACKET_OPEN);
			setState(129); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(128);
				port_def();
				}
				}
				setState(131); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(133);
			match(BRACKET_CLOSE);
			setState(134);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Port_defContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(CBBsdlParser.COLON, 0); }
		public Port_functionContext port_function() {
			return getRuleContext(Port_functionContext.class,0);
		}
		public Port_typeContext port_type() {
			return getRuleContext(Port_typeContext.class,0);
		}
		public List<Port_nameContext> port_name() {
			return getRuleContexts(Port_nameContext.class);
		}
		public Port_nameContext port_name(int i) {
			return getRuleContext(Port_nameContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(CBBsdlParser.SEMICOLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(CBBsdlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CBBsdlParser.COMMA, i);
		}
		public Port_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port_def; }
	}

	public final Port_defContext port_def() throws RecognitionException {
		Port_defContext _localctx = new Port_defContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_port_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(136);
				port_name();
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(137);
					match(COMMA);
					}
				}

				}
				}
				setState(142); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(144);
			match(COLON);
			setState(145);
			port_function();
			setState(146);
			port_type();
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(147);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Port_nameContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Port_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port_name; }
	}

	public final Port_nameContext port_name() throws RecognitionException {
		Port_nameContext _localctx = new Port_nameContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_port_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Port_functionContext extends ParserRuleContext {
		public TerminalNode INOUT() { return getToken(CBBsdlParser.INOUT, 0); }
		public TerminalNode IN() { return getToken(CBBsdlParser.IN, 0); }
		public TerminalNode OUT() { return getToken(CBBsdlParser.OUT, 0); }
		public TerminalNode LINKAGE() { return getToken(CBBsdlParser.LINKAGE, 0); }
		public Port_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port_function; }
	}

	public final Port_functionContext port_function() throws RecognitionException {
		Port_functionContext _localctx = new Port_functionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_port_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 491520L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Port_typeContext extends ParserRuleContext {
		public BitContext bit() {
			return getRuleContext(BitContext.class,0);
		}
		public Bit_vectorContext bit_vector() {
			return getRuleContext(Bit_vectorContext.class,0);
		}
		public TerminalNode ID() { return getToken(CBBsdlParser.ID, 0); }
		public Port_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port_type; }
	}

	public final Port_typeContext port_type() throws RecognitionException {
		Port_typeContext _localctx = new Port_typeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_port_type);
		try {
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BIT:
				enterOuterAlt(_localctx, 1);
				{
				setState(154);
				bit();
				}
				break;
			case BIT_VECTOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				bit_vector();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(156);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BitContext extends ParserRuleContext {
		public TerminalNode BIT() { return getToken(CBBsdlParser.BIT, 0); }
		public BitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bit; }
	}

	public final BitContext bit() throws RecognitionException {
		BitContext _localctx = new BitContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_bit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(BIT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bit_vectorContext extends ParserRuleContext {
		public TerminalNode BIT_VECTOR() { return getToken(CBBsdlParser.BIT_VECTOR, 0); }
		public TerminalNode BRACKET_OPEN() { return getToken(CBBsdlParser.BRACKET_OPEN, 0); }
		public Bit_rangeContext bit_range() {
			return getRuleContext(Bit_rangeContext.class,0);
		}
		public TerminalNode BRACKET_CLOSE() { return getToken(CBBsdlParser.BRACKET_CLOSE, 0); }
		public Bit_vectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bit_vector; }
	}

	public final Bit_vectorContext bit_vector() throws RecognitionException {
		Bit_vectorContext _localctx = new Bit_vectorContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_bit_vector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(BIT_VECTOR);
			setState(162);
			match(BRACKET_OPEN);
			setState(163);
			bit_range();
			setState(164);
			match(BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
